--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -14,6 +14,7 @@
   margin: 0;
   padding: 0 5vw 0 5vw;
   box-shadow: 0 2px 20px 1px rgb(0, 0, 0, 0.5);
+  z-index: 9999;
 }
 
 @media screen and (min-width: 960px) {
